--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 
 <body style="margin:0px;padding:0px;height:100vh;display:flex;justify-content:center;align-items:center;">
 	<i class="fas fa-spinner fa-spin fa-5x"></i>
-<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>
 $(function(){
 	var app = 'https://script.google.com/macros/s/AKfycbwUyDz7YJ-UKnqDqst-cTMcoye8R5xMlqfHDA3M_0-rWFCzZLE/exec';
